--- a/views/contents/about.ejs
+++ b/views/contents/about.ejs
@@ -3,7 +3,7 @@
 <table>
     <th>
         <td style="width: 35%">
-            <img src="\Assets\images\aarish.JPG" class="rounded float-left" alt="Arsh" width="70%">
+            <img src="\Assets\images\aarish.JPG" class="rounded float-left" alt="Arish" width="70%">
             <img src="" width="70%" >
         </td>
         <td>
